--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 
 
 		<!-- DEPENDENCIES FROM EMBEDDED TOMCAT -->
